[package]
name = "wif"
version = "0.1.0"
edition = "2021"
description = "Bitcoin Wallet Import Format written in Rust, for encoding/decoding WIF"
readme = "README.md"
keys = ["bitcoin", "rust-crypto", "wif", "wallet", "blockchain", "bitcoin-wallet"]
license = "MIT/Apache-2.0"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bs58 = "0.4.0"
hex = "0.4.3"
openssl = "0.10.42"
serde = { version = "1.0.147", features = ["derive"] }
